--- a/assets/css/charitable.css
+++ b/assets/css/charitable.css
@@ -311,19 +311,23 @@
 .charitable-table tr, .charitable-table td {
   padding-right: 1.5em; }
 @media (max-width: 48em) {
-  .charitable-table thead {
-    display: none; }
-  .charitable-table tr {
-    display: block;
-    padding: 1em 0; }
-    .charitable-table tr td {
+  .charitable-table {
+    border: none !important; }
+    .charitable-table thead {
+      display: none; }
+    .charitable-table tr {
       display: block;
-      text-align: right !important;
-      border: 0; }
-      .charitable-table tr td::before {
-        content: attr(data-title) ": ";
-        font-weight: 700;
-        float: left; } }
+      padding: 1em 0;
+      margin-bottom: 1em; }
+      .charitable-table tr td {
+        display: block;
+        padding: 0.5em 0 !important;
+        text-align: right !important;
+        border: none !important; }
+        .charitable-table tr td::before {
+          content: attr(data-title) ": ";
+          font-weight: 700;
+          float: left; } }
 
 /* Campaigns grid */
 .campaign-loop.campaign-list,
