--- a/assets/css/scss/public/_receipts.scss
+++ b/assets/css/scss/public/_receipts.scss
@@ -24,17 +24,22 @@
 
 
 	@include bp( 768, false ) {
+		border: none !important;
+
 		thead {
 			display: none;
 		}
+
 		tr {
 			display: block;
 			padding: 1em 0;
+			margin-bottom: 1em;
 
 			td {
 				display: block;
+				padding: 0.5em 0 !important;
 				text-align: right !important;
-				border: 0;
+				border: none !important;
 
 				&::before {
 					content: attr(data-title) ": ";
@@ -46,4 +51,3 @@
 
 	}
 }
-
