--- a/assets/css/scss/admin/_metaboxes-campaign.scss
+++ b/assets/css/scss/admin/_metaboxes-campaign.scss
@@ -11,6 +11,7 @@
 
 /* --- Top campaign meta boxes --- */
 
+#campaign-sortables,
 #campaign-top-sortables {
     padding-top: 20px;
 
@@ -42,6 +43,7 @@
         }
     }
 }
+
 
 /* --- End Date --- */
 
