--- a/assets/css/scss/admin/_metaboxes.scss
+++ b/assets/css/scss/admin/_metaboxes.scss
@@ -17,9 +17,12 @@
         padding: 0 0 6px 0;
     }
 
-    .handlediv,
-    .hndle {
+    .handlediv {
         display: none;
+    }
+
+    .hndle {
+        padding-left: 0;
     }
 
     input,
