--- a/assets/css/scss/public/_receipts.scss
+++ b/assets/css/scss/public/_receipts.scss
@@ -38,6 +38,8 @@
 	}
 
 	@include bp( 768, false ) {
+		border: none !important;
+
 		thead {
 			display: none;
 		}
@@ -50,6 +52,7 @@
 			td {
 				display: block;
 				padding: .25em 0.5em!important;
+				border: none !important;
 				line-height: 1.3;
 
 				&::before {
