--- a/assets/css/charitable.css
+++ b/assets/css/charitable.css
@@ -326,25 +326,30 @@
     .charitable-table tbody tr:nth-child(2n+1) {
       background: #f4f4f4; }
   @media (max-width: 48em) {
-    .charitable-table {
+    .charitable-table.charitable-responsive-table {
       border: none !important; }
-      .charitable-table thead {
+      .charitable-table.charitable-responsive-table thead {
         display: none; }
-      .charitable-table tr {
+      .charitable-table.charitable-responsive-table tr {
         display: block;
         padding: 1em 0;
         margin-bottom: 1em; }
-        .charitable-table tr td {
+        .charitable-table.charitable-responsive-table tr td {
           display: block;
-          padding: 0.25em 0.5em !important;
+          padding: .25em 0.5em !important;
           border: none !important;
           line-height: 1.3; }
-          .charitable-table tr td::before {
+          .charitable-table.charitable-responsive-table tr td::before {
             content: attr(data-title) ": ";
             font-weight: 700;
             width: 100%; }
-          .charitable-table tr td .actions {
-            text-align: right; } }
+          .charitable-table.charitable-responsive-table tr td .actions {
+            text-align: right; }
+    .charitable-table.charitable-donation-summary tr, .charitable-table.charitable-donation-details tr {
+      display: flex;
+      justify-content: space-between; }
+    .charitable-table.charitable-donation-summary td, .charitable-table.charitable-donation-summary th, .charitable-table.charitable-donation-details td, .charitable-table.charitable-donation-details th {
+      border: none !important; } }
 
 /* Campaigns grid */
 .campaign-loop.campaign-list,
