--- a/assets/css/charitable.css
+++ b/assets/css/charitable.css
@@ -94,12 +94,32 @@
   font-size: 1.2em; }
 
 /* Donate Button */
-.donate-button {
-  padding: 6px 24px;
-  font-size: 1em;
-  line-height: 1.5em;
-  border: none;
-  color: #fff; }
+.campaign-donation {
+  display: inline-block;
+  border-radius: 4px; }
+  .campaign-donation.has-amount-field .charitable-custom-amount-field {
+    display: inline-block;
+    margin: 0 !important;
+    width: 50% !important;
+    height: 100% !important;
+    background-color: #fff; }
+  .campaign-donation.has-amount-field .donate-button {
+    display: inline-block;
+    margin-left: 0 !important;
+    width: 50%; }
+  .campaign-donation .donate-button {
+    padding: 6px 24px;
+    font-size: 1em;
+    line-height: 1.5em;
+    border: none;
+    color: #fff;
+    text-align: center; }
+    .campaign-donation .donate-button.medium-size {
+      font-size: 1.5em;
+      padding: 1em 24px; }
+    .campaign-donation .donate-button.large-size {
+      font-size: 3em;
+      padding: 1em 24px; }
 
 /* Forms */
 .charitable-button {
