--- a/assets/css/scss/admin/_metaboxes.scss
+++ b/assets/css/scss/admin/_metaboxes.scss
@@ -244,7 +244,7 @@ body.post-type-campaign {
 }
 
 .charitable-actions-form {
-    padding: 0 20px 20px 20px;
+    padding: 12px 12px 18px 12px;
 }
 
 .charitable-actions-submit {
