Fixed bottom border for donation metaboxes

--- a/assets/css/scss/admin/_metaboxes-donation.scss
+++ b/assets/css/scss/admin/_metaboxes-donation.scss
@@ -177,7 +177,7 @@ body.post-type-donation {
 #donation-details,
 #donation-log,
 #donation-actions {
-    border-bottom-width: 1px;
+    border-bottom: 1px solid #ccd0d4;
 }
 
 #donation-details {
