--- a/assets/css/charitable-admin.css
+++ b/assets/css/charitable-admin.css
@@ -773,7 +773,7 @@ body.post-type-donation .donation-erasure-notice {
 #donation-details,
 #donation-log,
 #donation-actions {
-  border-bottom-width: 1px; }
+  border-bottom: 1px solid #ccd0d4; }
 
 #donation-details dt {
   font-weight: bold;
