--- a/assets/css/scss/admin/_metaboxes-campaign.scss
+++ b/assets/css/scss/admin/_metaboxes-campaign.scss
@@ -312,8 +312,8 @@
     }
 }
 
-#charitable-post-author-wrap {
-    padding-top: 24px;
-    margin-top: 12px;
-    border-top: 1px solid #e1e1e1;
+#charitable-campaign-creator-metabox-wrap #campaign-creator {
+    padding-bottom: 24px;
+    margin-bottom: 12px;
+    border-bottom: 1px solid #e1e1e1;
 }
